--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
