--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "next": "13.5.4",
+    "next-cloudinary": "^4.25.0",
     "react": "^18",
     "react-dom": "^18"
   },
