--- a/.hintrc
+++ b/.hintrc
@@ -3,6 +3,14 @@
     "development"
   ],
   "hints": {
-    "no-inline-styles": "off"
-  }
+    "no-inline-styles": "off",
+    "apple-touch-icons": "off"
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not and_ff <= 113",
+    "not firefox <= 113",
+    "not opera <= 99"
+  ]
 }
